Fix: Remove top margin for empty elements to ensure consistent spacing

--- a/themes/hacklab-theme/assets/scss/2-tools/1.mixins.scss
+++ b/themes/hacklab-theme/assets/scss/2-tools/1.mixins.scss
@@ -148,5 +148,9 @@
 
     & > * + * {
         margin-top: $gap;
+
+        &:empty {
+            margin-top: 0;
+        }
     }
 }
