--- a/themes/hacklab-theme/assets/scss/6-components/_form-events.scss
+++ b/themes/hacklab-theme/assets/scss/6-components/_form-events.scss
@@ -29,7 +29,6 @@
 
         .tabelasDiv {
             position: relative;
-            top: -100px;
 
             h2 {
                 color: $color--primary-dark;
